Revert "rename enableColumnResizing to enableColumnResize for 2.x compatibility"
This reverts commit c715e0ff18adf6b8758d7de9b3698b162ce1e0c1.

--- a/src/features/resize-columns/templates/columnResizer.html
+++ b/src/features/resize-columns/templates/columnResizer.html
@@ -1,6 +1,6 @@
 <div
   ui-grid-column-resizer
-  ng-if="grid.options.enableColumnResize"
+  ng-if="grid.options.enableColumnResizing"
   class="ui-grid-column-resizer"
   col="col"
   position="right"
