--- a/src/less/icons.less
+++ b/src/less/icons.less
@@ -49,3 +49,8 @@
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
+
+.ui-grid-icon-blank::before {
+  width: 1em;
+  content: ' ';
+}
