--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -3,10 +3,12 @@
   <div class="ui-grid-cell-contents" col-index="renderIndex">
     {{ col.displayName }}
 
-    <span ng-show="col.sort.direction" ng-class="{ 'ui-grid-icon-up-dir': col.sort.direction == asc, 'ui-grid-icon-down-dir': col.sort.direction == desc }"></span>
+    <span ui-grid-visible="col.sort.direction" ng-class="{ 'ui-grid-icon-up-dir': col.sort.direction == asc, 'ui-grid-icon-down-dir': col.sort.direction == desc, 'ui-grid-icon-blank': !col.sort.direction }">
+      &nbsp;
+    </span>
   </div>
 
   <div ng-if="grid.options.enableColumnMenu" class="ui-grid-column-menu-button" ng-click="toggleMenu($event)">
-    <span class="ui-grid-icon-angle-down">&nbsp;<span>
+    <i class="ui-grid-icon-angle-down">&nbsp;<i>
   </div>
 </div>
