refactor cellEditTemplates; document edit features in tutorial

--- a/src/features/edit/templates/cellTextEditor.html
+++ b/src/features/edit/templates/cellTextEditor.html
@@ -1,1 +1,3 @@
-<input ng-class="'colt' + col.index" ng-input="COL_FIELD" ng-model="COL_FIELD" />
+<div>
+    <input ng-class="'colt' + col.index" ui-grid-text-editor ng-model="COL_FIELD" />
+</div>
