--- a/src/less/body.less
+++ b/src/less/body.less
@@ -42,3 +42,31 @@
     border-bottom-style: solid;
   }
 }
+
+.ui-grid-no-row-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 10%;
+
+  .ui-grid-top-panel-background;
+  .border-radius(@gridBorderRadius);
+  border: @gridBorderWidth solid @borderColor;
+
+  font-size: 2em;
+  text-align: center;
+
+  > * {
+    position: absolute;
+    display: table;
+    margin: auto 0;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.66;
+  }
+}
