--- a/src/less/header.less
+++ b/src/less/header.less
@@ -80,9 +80,8 @@
   position: absolute;
   right: @gridBorderWidth; // So it doesn't overlay the vertical bar
   top: 0;
-  bottom: 0;
-
-  .ui-grid-top-panel-background;
+  // bottom: 0;
+  // .ui-grid-top-panel-background;
 
   .ui-grid-icon-angle-down {
     vertical-align: sub;
@@ -108,5 +107,81 @@
   &.ng-hide-add,
   &.ng-hide-remove.ng-hide-remove-active {
     .transform(translateY(0));
+  }
+}
+
+// NOTE: not used currently (TODO(c0bra): Remove or use down the road?)
+// .ui-grid-column-filter {
+//   display: table;
+
+//   .input-container {
+//     position: relative;
+//     display: table-cell;
+
+//     .column-filter-input {
+//       margin: 0;
+//     }
+
+//     .column-filter-cancel-icon-container {
+//       position: absolute;
+//       top: 0;
+//       bottom: 0;
+//       right: 0;
+
+//       .column-filter-cancel-icon {
+//         position: absolute;
+//         top: 50%;
+//         line-height: 32px;
+//         margin-top: -16px;
+//         right: 2px;
+//       }
+//     }
+//   }
+
+//   .button-container {
+//     display: table-cell;
+
+//     .ui-grid-button {
+//       margin-left: 4px;
+//     }
+//   }
+// }
+
+.ui-grid-filter-container {
+  padding: 4px 10px;
+  position: relative;
+
+  .ui-grid-filter-button {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+
+    [class^="ui-grid-icon"].right {
+      position: absolute;
+      top: 50%;
+      line-height: 32px;
+      margin-top: -16px;
+      right: 10px;
+      opacity: 0.66;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+input[type="text"].ui-grid-filter-input {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  width: 100%;
+
+  border: @gridBorderWidth solid  @borderColor;
+  .border-radius(@gridBorderRadius);
+
+  &:hover {
+    border: @gridBorderWidth solid  @borderColor;
   }
 }
