--- a/src/templates/ui-grid/uiGridMenu.html
+++ b/src/templates/ui-grid/uiGridMenu.html
@@ -1,7 +1,15 @@
 <div class="ui-grid-menu">
   <div class="ui-grid-menu-inner" ng-show="shown">
     <ul class="ui-grid-menu-items">
-      <li ng-repeat="item in menuItems" ui-grid-menu-item action="item.action" title="item.title" active="item.active" icon="item.icon" shown="item.shown" context="item.context"></li>
+      <li
+        ng-repeat="item in menuItems"
+        ui-grid-menu-item action="item.action"
+        title="item.title"
+        active="item.active"
+        icon="item.icon"
+        shown="item.shown"
+        context="item.context"
+        template-url="item.templateUrl"></li>
     </ul>
   </div>
 </div>
