add ui-grid-inner-cell-contents so editors work properly when cell contents are empty

--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -6,6 +6,11 @@
   background-color: inherit;
 }
 
+.ui-grid-inner-cell-contents {
+  height:100%;
+  width:100%;
+}
+
 .ui-grid-cell-contents {
   padding: 5px;
   -moz-box-sizing: border-box;
@@ -16,6 +21,8 @@
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   overflow: hidden;
+  height:100%;
+  width:100%;
 }
 
 .ui-grid-cell-contents-hidden {
