--- a/src/templates/ui-grid/ui-grid-row.html
+++ b/src/templates/ui-grid/ui-grid-row.html
@@ -1,6 +1,6 @@
 <div>
   <div ng-repeat="col in grid.renderedColumns track by $index" class="ui-grid-cell col{{ col.index }}">
     <div class="ui-grid-vertical-bar">&nbsp;</div>
-    <div ui-grid-cell col="col" row="row" row-index="row.index" col-index="col.colDef.index" />
+    <div class="ui-grid-inner-cell-contents" ui-grid-cell col="col" row="row" row-index="row.index" col-index="col.colDef.index" />
   </div>
 </div>
