--- a/src/templates/ui-grid/ui-grid-row.html
+++ b/src/templates/ui-grid/ui-grid-row.html
@@ -1,5 +1,5 @@
 <div>
-  <div ng-repeat="col in grid.renderedColumns track by $index" class="ui-grid-cell col{{ col.index }}">
+  <div ng-repeat="col in grid.renderContainers.body.columnCache track by $index" class="ui-grid-cell col{{ col.index }}">
     <div class="ui-grid-vertical-bar">&nbsp;</div>
     <div class="ui-grid-inner-cell-contents" ui-grid-cell col="col" row="row" row-index="row.index" col-index="col.colDef.index" />
   </div>
