--- a/src/templates/ui-grid/ui-grid-body.html
+++ b/src/templates/ui-grid/ui-grid-body.html
@@ -1,6 +1,6 @@
 <div class="ui-grid-body">
   <div class="ui-grid-scrollbar-box">
-    <div ui-grid-viewport viewport="body" class="ui-grid-viewport">
+    <div class="ui-grid-viewport">
       <div class="ui-grid-canvas">
         <div ng-repeat="row in grid.renderedRows track by $index" class="ui-grid-row" ng-style="rowStyle($index)">
           <div ui-grid-row="row" row-index="row.index"></div>
@@ -17,7 +17,5 @@
   <div ui-grid-scrollbar ng-if="grid.options.enableVirtualScrolling" type="vertical" scrolling-class="ui-grid-scrolling"></div>
   <div ui-grid-scrollbar ng-if="grid.options.enableVirtualScrolling" type="horizontal" scrolling-class="ui-grid-scrolling"></div>
 
-  <div class="ui-grid-no-row-overlay" ng-show="!grid.renderedRows.length">
-    <span>No Rows</span>
-  </div>
+  <div ng-transclude></div>
 </div>
