WIP: adding pinned container and render container functionality

--- a/src/less/pinning.less
+++ b/src/less/pinning.less
@@ -1,8 +1,28 @@
 
-.ui-grid-pinned.left {
-  float: left;
+.ui-grid-pinned-container.left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  // height: 100%;
 }
 
-.ui-grid-pinned.right {
-  float: right;
+.ui-grid-pinned-container.right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  // height: 100%;
+}
+
+.ui-grid-pinned-container.top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  // width: 100%;
+}
+
+.ui-grid-pinned-container.bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  // width: 100%;
 }
