--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -52,6 +52,8 @@
     .grid{{ grid.id }} .ui-grid-native-scrollbar.vertical {
       height: {{ grid.getViewportHeight() }}px;
     }
+
+    {{ grid.customStyles }}
   </style>
 
   <div ui-grid-header></div>
