--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -1,5 +1,9 @@
 <div class="ui-grid-render-container">
   <div class="viewport">
-    <div ui-grid-render-canvas class="canvas"></div>
+    <div ui-grid-render-canvas class="canvas">
+    	<div ng-repeat="row in container.rowCache track by $index" class="ui-grid-row">
+          <div ui-grid-row="row" row-index="row.index" render-container="container"></div>
+        </div>
+    </div>
   </div>
 </div>
