--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -56,13 +56,15 @@
     {{ grid.customStyles }}
   </style>
 
-  <div ui-grid-header></div>
+  <!-- <div ui-grid-header></div>
 
   <div ui-grid-body>
     <div class="ui-grid-no-row-overlay" ng-show="!grid.renderedRows.length">
       <span>No Rows</span>
     </div>
-  </div>
+  </div> -->
+
+  <div ui-grid-render-container="body"></div>
 
   <div ui-grid-footer></div>
 
