--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -1,9 +1,15 @@
 <div class="ui-grid-render-container">
-  <div class="viewport">
+  <div ui-grid-header container="container"></div>
+
+  <div ui-grid-container class="viewport">
     <div ui-grid-render-canvas class="canvas">
-    	<div ng-repeat="row in container.rowCache track by $index" class="ui-grid-row">
-          <div ui-grid-row="row" row-index="row.index" render-container="container"></div>
-        </div>
+    	<div ng-repeat="row in container.visibleRowCache track by $index" class="ui-grid-row">
+        <div ui-grid-row="row" row-index="row.index" render-container="container"></div>
+      </div>
     </div>
   </div>
+
+  <!-- native scrolling -->
+  <div ui-grid-native-scrollbar ng-if="!grid.options.enableVirtualScrolling && grid.options.enableNativeScrolling" type="vertical"></div>
+  <div ui-grid-native-scrollbar ng-if="!grid.options.enableVirtualScrolling && grid.options.enableNativeScrolling" type="horizontal"></div>
 </div>
