WIP: moving scroll handling into GridRenderContainer

--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -64,7 +64,7 @@
     </div>
   </div> -->
 
-  <div ui-grid-render-container="body"></div>
+  <div ui-grid-render-container container-name="'body'"></div>
 
   <div ui-grid-footer></div>
 
