--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -1,12 +1,12 @@
 <div class="ui-grid-render-container">
-  <div ui-grid-header container="container"></div>
+  <div ui-grid-header></div>
 
-  <div ui-grid-container class="viewport">
-    <div ui-grid-render-canvas class="canvas">
+  <div ui-grid-viewport>
+    <!-- <div ui-grid-render-canvas class="ui-grid-canvas">
     	<div ng-repeat="row in container.visibleRowCache track by $index" class="ui-grid-row">
         <div ui-grid-row="row" row-index="row.index" render-container="container"></div>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <!-- native scrolling -->
