WIP: render container refactoring

--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -35,9 +35,9 @@
       border-bottom-width: {{ ((grid.getTotalRowHeight() < grid.getViewportHeight()) && '1') || '0' }}px;
     }
 
-    {{ rowStyles }}
+    /*{{ rowStyles }}
 
-    {{ columnStyles }}
+    {{ columnStyles }}*/
 
     /*.grid{{ grid.id }} .ui-grid-body .ui-grid-cell:first-child, .grid{{ grid.id }} .ui-grid-header .ui-grid-header-cell:first-child {
       margin-left: {{ grid.columnOffset || 0 }}px;
