--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -1,13 +1,12 @@
 <div class="ui-grid-render-container">
   <div ui-grid-header></div>
 
-  <div ui-grid-viewport>
-    <!-- <div ui-grid-render-canvas class="ui-grid-canvas">
-    	<div ng-repeat="row in container.visibleRowCache track by $index" class="ui-grid-row">
+  <div ui-grid-viewport></div>
+  <!-- <div ui-grid-render-canvas class="ui-grid-canvas">
+      <div ng-repeat="row in container.visibleRowCache track by $index" class="ui-grid-row">
         <div ui-grid-row="row" row-index="row.index" render-container="container"></div>
       </div>
     </div> -->
-  </div>
 
   <!-- native scrolling -->
   <div ui-grid-native-scrollbar ng-if="!grid.options.enableVirtualScrolling && grid.options.enableNativeScrolling" type="vertical"></div>
