--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -5,15 +5,15 @@
       /* Styles for the grid */
     }
 
-    .grid{{ grid.id }} .ui-grid-header {
+    /*.grid{{ grid.id }} .ui-grid-header {
       width: {{ grid.getHeaderViewportWidth() }}px;
-    }
+    }*/
 
-    .grid{{ grid.id }} .ui-grid-header-canvas {
+    /*.grid{{ grid.id }} .ui-grid-header-canvas {
       width: {{ grid.getCanvasWidth() }}px;
-    }
+    }*/
 
-    .grid{{ grid.id }} .ui-grid-body {
+    /*.grid{{ grid.id }} .ui-grid-body {
       height: {{ grid.getBodyHeight() }}px;
     }
 
@@ -25,7 +25,7 @@
     .grid{{ grid.id }} .ui-grid-canvas {
       height: {{ grid.getCanvasHeight() }}px;
       width: {{ grid.getCanvasWidth() }}px;
-    }
+    }*/
 
     .grid{{ grid.id }} .ui-grid-row, .grid{{ grid.id }} .ui-grid-cell, .grid{{ grid.id }} .ui-grid-cell .ui-grid-vertical-bar {
       height: {{ grid.options.rowHeight }}px;
