--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -1,4 +1,4 @@
-<div ui-i18n="en" class="ui-grid grid{{ grid.id }}">
+<div ui-i18n="en" class="ui-grid">
   <!-- TODO (c0bra): add "scoped" attr here, eventually? -->
   <style ui-grid-style>
     .grid{{ grid.id }} {
