--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -1,4 +1,4 @@
-<div class="ui-grid-header-cell col{{ col.index }} clearfix" ng-class="{ 'sortable': sortable }">
+<div class="ui-grid-header-cell clearfix" ng-class="{ 'sortable': sortable }">
   <div class="ui-grid-vertical-bar">&nbsp;</div>
   <div class="ui-grid-cell-contents" col-index="renderIndex">
     {{ col.displayName }}
