--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -64,7 +64,7 @@
     </div>
   </div> -->
 
-  <div ui-grid-render-container container-name="'body'" bind-scroll-horizontal="true" bind-scroll-vertical="true"></div>
+  <div ui-grid-render-container container-id="'body'" col-container-name="'body'" row-container-name="'body'" bind-scroll-horizontal="true" bind-scroll-vertical="true" enable-scrollbars="true"></div>
 
   <div ui-grid-footer></div>
 
