--- a/src/templates/ui-grid/uiGridViewport.html
+++ b/src/templates/ui-grid/uiGridViewport.html
@@ -1,6 +1,6 @@
 <div class="ui-grid-viewport">
   <div class="ui-grid-canvas">
-    <div ng-repeat="row in rowContainer.renderedRows track by $index" class="ui-grid-row" ng-style="rowContainer.rowStyle($index)">
+    <div ng-repeat="row in rowContainer.renderedRows track by $index" class="ui-grid-row" ng-style="containerCtrl.rowStyle($index)">
       <div ui-grid-row="row" row-index="row.index"></div>
     </div>
   </div>
