selection feature sip

--- a/src/less/body.less
+++ b/src/less/body.less
@@ -40,7 +40,17 @@
   &:last-child .ui-grid-cell {
     border-bottom-color: @borderColor;
     border-bottom-style: solid;
+
   }
+}
+
+
+.ui-grid-row-selected {
+   .ui-grid-cell {
+     background-color: @rowSelected;
+  }
+
+
 }
 
 .ui-grid-no-row-overlay {
