--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -42,7 +42,7 @@
 
 // TODO: color for menu background
 
-// TODO: color  for row selections
+@rowSelected: #C9DDE1;
 
 // TODO: color for cell selections
 @focusedCell: #b3c4c7;
