(perf) remove div nodes that aren't really needed.  Small increase in perf and simplifies our dom

--- a/src/templates/ui-grid/ui-grid-row.html
+++ b/src/templates/ui-grid/ui-grid-row.html
@@ -1,5 +1,3 @@
-<div>
-  <div ng-repeat="col in colContainer.renderedColumns track by col.colDef.name" class="ui-grid-cell" ui-grid-col>
-    <div class="ui-grid-inner-cell-contents" ui-grid-cell />
+  <div ng-repeat="col in colContainer.renderedColumns track by col.colDef.name" class="ui-grid-cell" ui-grid-col ui-grid-cell>
   </div>
-</div>
+
