Partially fixed pinned container border css

--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -1,7 +1,7 @@
 .ui-grid-cell {
   overflow: hidden;
   // position: absolute;
-  position: relative;
+  // position: relative; // NOTE: removing so border is visible
   float: left;
   background-color: inherit;
   border-right: @gridBorderWidth solid;
