--- a/src/features/pinning/less/pinning.less
+++ b/src/features/pinning/less/pinning.less
@@ -4,28 +4,37 @@
   // position: absolute;
   float: left;
 
-  &.left .ui-grid-header-cell:last-child .ui-grid-vertical-bar {
-    right: 0;
+  &.left .ui-grid-header-cell:last-child {
+    border-right: @gridBorderWidth solid;
+    border-width: @gridBorderWidth;
+    border-color: darken(@headerVerticalBarColor, 15%);
+  }
+
+  &.left .ui-grid-cell:last-child {
+    border-right: @gridBorderWidth solid;
+    border-width: @gridBorderWidth;
+    border-color: darken(@verticalBarColor, 15%);
+  }
+
+  &.left .ui-grid-header-cell:not(:last-child) .ui-grid-vertical-bar, .ui-grid-cell:not(:last-child) .ui-grid-vertical-bar {
     width: @gridBorderWidth;
+  }
+
+  &.left .ui-grid-header-cell:not(:last-child) .ui-grid-vertical-bar {
     background-color: darken(@headerVerticalBarColor, 15%);
   }
 
-  &.left .ui-grid-cell:last-child .ui-grid-vertical-bar {
-    width: @gridBorderWidth;
+  &.left .ui-grid-cell:not(:last-child) .ui-grid-vertical-bar {
     background-color: darken(@verticalBarColor, 15%);
+  }
+
+  &.left .ui-grid-header-cell:last-child .ui-grid-vertical-bar {
+    right: -1px; // TODO(c0bra): Should this be grid width? Test column resizing with custom grid border width
+    width: @gridBorderWidth;
+    background-color: darken(@headerVerticalBarColor, 15%);
   }
 }
 
 .ui-grid-render-container-body {
   float: left;
 }
-
-// [ui-grid-pinned-container].left {
-//   top: 0;
-//   left: 0;
-// }
-
-// [ui-grid-pinned-container].right {
-//   top: 0;
-//   right: 0;
-// }
