--- a/src/less/body.less
+++ b/src/less/body.less
@@ -1,7 +1,7 @@
 
-.ui-grid-body {
+.ui-grid-render-container {
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
 
   .border-radius(0, @gridBorderRadius, @gridBorderRadius, 0);
 }
