--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -23,8 +23,8 @@
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   overflow: hidden;
-  height:100%;
-  width:100%;
+  height: 100%;
+  // width: 100%;
 }
 
 .ui-grid-cell-contents-hidden {
