--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -53,6 +53,10 @@
       height: {{ grid.getViewportHeight() }}px;
     }
 
+    .ui-grid[dir=rtl] .ui-grid-viewport {
+      padding-left: {{ grid.verticalScrollbarWidth }}px;
+    }
+
     {{ grid.customStyles }}
   </style>
 
