IE doesn't support the `initial` css property

--- a/src/less/rtl.less
+++ b/src/less/rtl.less
@@ -20,14 +20,14 @@
 .ui-grid[dir=rtl] .ui-grid-native-scrollbar.vertical
 {
     left: 0px;
-    right: initial;
+    right: inherit;
 }
 
 .grid[dir=rtl] .ui-grid-column-menu-button {
   position: absolute;
   left: 1px;
   top: 0;
-  right: initial;
+  right: inherit;
 }
 
 .ui-grid[dir=rtl] .ui-grid-cell:first-child,
