input type removed for simple text editor

--- a/src/features/edit/templates/cellTextEditor.html
+++ b/src/features/edit/templates/cellTextEditor.html
@@ -1,3 +1,3 @@
 <div>
-    <input type="text" ng-class="'colt' + col.index" ui-grid-text-editor ng-model="COL_FIELD" />
+    <input ng-class="'colt' + col.index" ui-grid-text-editor ng-model="COL_FIELD" />
 </div>
