--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -62,4 +62,8 @@
 @scrollbarBorder: 1px solid darken(@scrollbarBackground, 15%);
 @scrollbarBorderScrolling: 1px solid darken(@scrollbarBackgroundScrolling, 15%);
 
+//Border to be applied to editors when the input value or invalid
+@invalidValueBorder: 1px solid rgb(252, 143, 143);
+@validValueBorder: 1px solid @borderColor;
+
 /*-- END VARIABLES (DO NOT REMOVE THESE COMMENTS) --*/
