more work on shift select feature

--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -25,6 +25,10 @@
   overflow: hidden;
   height: 100%;
   // width: 100%;
+
+}
+
+.ui-grid-disable-selection {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
