Create GridRow.uid property to assure we always have  unique row TrackBy row.uid in renderContainer Add RowRenderIndex to scope

--- a/src/templates/ui-grid/uiGridViewport.html
+++ b/src/templates/ui-grid/uiGridViewport.html
@@ -1,7 +1,7 @@
 <div class="ui-grid-viewport">
   <div class="ui-grid-canvas">
-    <div ng-repeat="row in rowContainer.renderedRows track by row.index" class="ui-grid-row" ng-style="rowContainer.rowStyle($index)">
-      <div ui-grid-row="row"></div>
+    <div ng-repeat="(rowRenderIndex, row) in rowContainer.renderedRows track by row.uid" class="ui-grid-row" ng-style="rowContainer.rowStyle(rowIndex)">
+      <div ui-grid-row="row" row-render-index="rowRenderIndex"></div>
     </div>
   </div>
 </div>
