--- a/src/templates/ui-grid/ui-grid-row.html
+++ b/src/templates/ui-grid/ui-grid-row.html
@@ -1,2 +1,2 @@
- <div ng-repeat="col in colContainer.renderedColumns track by col.colDef.name" class="ui-grid-cell" ui-grid-cell></div>
+ <div ng-repeat="(colRenderIndex, col) in colContainer.renderedColumns track by col.colDef.name" class="ui-grid-cell" ui-grid-cell></div>
  
