grid footer support
grid footer support

--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -9,7 +9,7 @@
   </div>
 
   <div ng-if="grid.options.enableColumnMenu" class="ui-grid-column-menu-button" ng-click="toggleMenu($event)">
-    <i class="ui-grid-icon-angle-down">&nbsp;<i>
+    <i class="ui-grid-icon-angle-down">&nbsp;</i>
   </div>
 
   <div ng-if="filterable" class="ui-grid-filter-container">
