--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -4,6 +4,9 @@
   <div ui-grid-viewport></div>
 
   <!-- native scrolling -->
-  <div ui-grid-native-scrollbar ng-if="!grid.options.enableVirtualScrolling && grid.options.enableNativeScrolling && enableScrollbars" type="vertical"></div>
+    <div ui-grid-footer ng-if="grid.options.showFooter"></div>
+
+    <div ui-grid-native-scrollbar ng-if="!grid.options.enableVirtualScrolling && grid.options.enableNativeScrolling && enableScrollbars" type="vertical"></div>
   <div ui-grid-native-scrollbar ng-if="!grid.options.enableVirtualScrolling && grid.options.enableNativeScrolling && enableScrollbars" type="horizontal"></div>
+
 </div>
