bugfix(Selection): #1550 selection was removing ui-grid-row class which removed rowHeight from selected row

--- a/src/features/selection/less/selection.less
+++ b/src/features/selection/less/selection.less
@@ -2,7 +2,7 @@
 
 .ui-grid-row-selected {
    .ui-grid-cell {
-     background-color: @rowSelected;
+     background-color: @rowSelected !important;
   }
 }
 
