--- a/src/features/edit/templates/cellEditor.html
+++ b/src/features/edit/templates/cellEditor.html
@@ -1,5 +1,6 @@
 <div>
     <form name="inputForm">
-        <input type="{{inputType}}" ng-class="'colt' + col.index" ui-grid-editor ng-model="COL_FIELD" />
+        <input ng-if="editType=='input'" type="{{inputType}}" ng-class="'colt' + col.index" ui-grid-editor ng-model="COL_FIELD" />
+        <select ng-if="editType=='dropdown'" ng-class="'colt' + col.index" ui-grid-edit-dropdown ng-model="COL_FIELD" ng-options="field[editDropdownIdLabel] as field[editDropdownValueLabel] CUSTOM_FILTERS for field in editDropdownOptionsArray"></select>
     </form>
 </div>
