--- a/src/templates/ui-grid/ui-grid-header.html
+++ b/src/templates/ui-grid/ui-grid-header.html
@@ -1,12 +1,11 @@
 <div class="ui-grid-top-panel">
   <div ui-grid-group-panel ng-show="grid.options.showGroupPanel"></div>
   <div class="ui-grid-header ui-grid-header-viewport">
+    <div ui-grid-menu-button></div>
     <div class="ui-grid-header-canvas">
         <div class="ui-grid-header-cell clearfix" ng-repeat="col in colContainer.renderedColumns track by col.colDef.name" ui-grid-header-cell col="col" render-index="$index" ng-style="$index === 0 && colContainer.columnStyle($index)">
         </div>
     </div>
-
-    
   </div>
   <div ui-grid-menu></div>
 </div>
