bugfix(Header): Sortable class on wrong element

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -65,7 +65,7 @@
   //  it should be. The column widths are calculated dynamically
   width: 0;
 
-  &.sortable {
+  .sortable {
     cursor: pointer;
   }
 }
