feat(Selection): Updates
* Make CSS classes snake-case to stay consistent with established standards
* Add OK icon from fontello to ui-grid icon set config
* Make unselected row header have a low-opacity check mark to hint user
  what the available action is.

--- a/src/features/selection/less/selection.less
+++ b/src/features/selection/less/selection.less
@@ -16,10 +16,16 @@
   cursor: default;
 }
 
-.uiGridSelectionRowHeaderButtons {
+.ui-grid-selection-row-header-buttons {
   cursor: pointer;
+  opacity: 0.1;
+
+  &.ui-grid-row-selected {
+    opacity: 1;
+  }
 }
 
-.uiGridSelectionRowHeaderCell {
+// TODO: remove? I can't find this class used anywhere, even with the camelCase name
+.ui-grid-selection-row-header-cell {
   border-bottom: solid @gridBorderWidth @borderColor;
 }
