--- a/src/features/selection/templates/selectionRowHeaderButtons.html
+++ b/src/features/selection/templates/selectionRowHeaderButtons.html
@@ -1,3 +1,3 @@
-<div class="uiGridSelectionRowHeaderButtons" ng-class="{'icon-ok': row.isSelected}" ng-click="selectButtonClick(row, $event)">
-&nbsp
+<div class="ui-grid-selection-row-header-buttons ui-grid-icon-ok" ng-class="{'ui-grid-row-selected': row.isSelected}" ng-click="selectButtonClick(row, $event)">
+  &nbsp;
 </div>
