Change uiGridRowHeaderCell css to snake-case

--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -36,7 +36,7 @@
   display: none;
 }
 
-.uiGridRowHeaderCell {
+.ui-grid-row-header-cell {
   background-color: #F0F0EE !important;
   border-bottom: solid @gridBorderWidth @borderColor;
 }
