--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -1,6 +1,6 @@
 .ui-grid-menu-button {
   z-index: 2;
-  position: absolute;
+  position: fixed;
   right: 0;  
   background: @headerBackgroundColor;
   border: @gridBorderWidth solid @borderColor;
