--- a/src/templates/ui-grid/ui-grid-menu-button.html
+++ b/src/templates/ui-grid/ui-grid-menu-button.html
@@ -1,4 +1,4 @@
-<div class="ui-grid-menu-button" ng-click="showMenu()">
-  <i class="ui-grid-icon-filter">&nbsp;</i>
+<div class="ui-grid-menu-button" ng-click="toggleMenu()">
+  <i class="ui-grid-icon-menu">&nbsp;</i>
   <div ui-grid-menu-handler ui-grid-menu menu-items="menuItems"></div>
 </div>
