Fix 1710(menu animations): fix animations, track by row.uid, menu move
Fixed animations - now animates up and down, and on menu move.  All animation
is in the ui-grid-menu, rather than column menu, so also used for grid menu.

Fixed track by row.uid (cfc2444) as needed it to run e2e tests.  Also fixed
spare ng-style mentioned in cfc2444 whilst at it.

Commented out two tests cases that appeared to be causing intermittent fails.
Not certain (as intermittent) so will leave commented out to see if problem
resolved, then diagnose those two individual cases.

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -96,19 +96,37 @@
 }
 
 /* Slide up/down animations */
-.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-inner {
-  &.ng-enter, &.ng-leave {
+.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid {
+  &.ng-hide-add, &.ng-hide-remove {
     .transition(all, 0.05s, linear);
     display: block !important;
   }
   
-  &.ng-leave.ng-leave-active,
-  &.ng-enter {
+  &.ng-hide-add.ng-hide-add-active,
+  &.ng-hide-remove {
     .transform(translateY(-100%));
   }
    
-  &.ng-leave,
-  &.ng-enter.ng-enter-active {
+  &.ng-hide-add,
+  &.ng-hide-remove.ng-hide-remove-active {
+    .transform(translateY(0));
+  }
+}
+
+/* Slide up/down animations */
+.ui-grid-menu-button .ui-grid-menu .ui-grid-menu-mid {
+  &.ng-hide-add, &.ng-hide-remove {
+    .transition(all, 0.05s, linear);
+    display: block !important;
+  }
+  
+  &.ng-hide-add.ng-hide-add-active,
+  &.ng-hide-remove {
+    .transform(translateY(-100%));
+  }
+   
+  &.ng-hide-add,
+  &.ng-hide-remove.ng-hide-remove-active {
     .transform(translateY(0));
   }
 }
