--- a/src/features/selection/templates/selectionHeaderCell.html
+++ b/src/features/selection/templates/selectionHeaderCell.html
@@ -1,4 +1,6 @@
 <div>
   <div class="ui-grid-vertical-bar">&nbsp;</div>
-  <div class="ui-grid-cell-contents" col-index="renderIndex"></div>
+  <div class="ui-grid-cell-contents" col-index="renderIndex">
+    <ui-grid-selection-select-all-buttons ng-if="grid.options.enableSelectAll"></ui-grid-selection-select-all-buttons>
+  </div>
 </div>
