--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -1,5 +1,5 @@
 <div ui-i18n="en" class="ui-grid">
-  <!-- TODO (c0bra): add "scoped" attr here, eventually? Maybe -->
+  <!-- TODO (c0bra): add "scoped" attr here, eventually? Maybe2 -->
   <style ui-grid-style>
     .grid{{ grid.id }} {
       /* Styles for the grid */
