Allow override of font-path

--- a/src/less/icons.less
+++ b/src/less/icons.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'ui-grid';
-  src: url('ui-grid.eot');
-  src: url('ui-grid.eot#iefix') format('embedded-opentype'),
-       url('ui-grid.woff') format('woff'),
-       url('ui-grid.ttf?') format('truetype'),
-       url('ui-grid.svg?#ui-grid') format('svg');
+  src: url('{@font-path}ui-grid.eot');
+  src: url('{@font-path}ui-grid.eot#iefix') format('embedded-opentype'),
+       url('{@font-path}ui-grid.woff') format('woff'),
+       url('{@font-path}ui-grid.ttf?') format('truetype'),
+       url('{@font-path}ui-grid.svg?#ui-grid') format('svg');
   font-weight: normal;
   font-style: normal;
 }
