--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -69,4 +69,9 @@
 @invalidValueBorder: 1px solid rgb(252, 143, 143);
 @validValueBorder: 1px solid @borderColor;
 
+/**
+* @section font library path
+*/
+@font-path: '';
+
 /*-- END VARIABLES (DO NOT REMOVE THESE COMMENTS) --*/
