an option to enable only horizontal or vertical scrollbars

--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -25,7 +25,7 @@
 
   <div ui-grid-menu-button ng-if="grid.options.enableGridMenu"></div>
 
-  <div ui-grid-render-container container-id="'body'" col-container-name="'body'" row-container-name="'body'" bind-scroll-horizontal="true" bind-scroll-vertical="true" enable-scrollbars="grid.options.enableScrollbars"></div>
+  <div ui-grid-render-container container-id="'body'" col-container-name="'body'" row-container-name="'body'" bind-scroll-horizontal="true" bind-scroll-vertical="true" enable-horizontal-scrollbar="grid.options.enableScrollbars || grid.options.enableHorizontalScrollbar" enable-vertical-scrollbar="grid.options.enableScrollbars || grid.options.enableVerticalScrollbar"></div>
 
   <div ui-grid-column-menu ng-if="grid.options.enableColumnMenus"></div>
 
