fix(cellNav): Minor fixes and speed improvement

--- a/src/features/cellnav/less/cellNav.less
+++ b/src/features/cellnav/less/cellNav.less
@@ -1,6 +1,11 @@
 @import '../../../less/variables';
 
-.ui-grid-cell-contents:focus {
+// .ui-grid-cell-contents:focus {
+//   outline: 0;
+//   background-color: @focusedCell;
+// }
+
+.ui-grid-cell-focus {
   outline: 0;
   background-color: @focusedCell;
 }
