renamed enableServerSidePaging to useExternalPaging, renamed totalServerItems to totalItems, bailout of rowsProcessor when externalPaging

--- a/src/features/paging/templates/ui-grid-paging.html
+++ b/src/features/paging/templates/ui-grid-paging.html
@@ -15,8 +15,8 @@
   </div>
     <div class="ui-grid-pager-count-container">
       <div class="ui-grid-pager-count">
-        <span ng-show="grid.options.totalServerItems > 0">
-            {{showingLow}} - {{showingHigh}} of {{grid.options.totalServerItems}} items
+        <span ng-show="grid.options.totalItems > 0">
+            {{showingLow}} - {{showingHigh}} of {{grid.options.totalItems}} items
         </span>
       </div>
   </div>
