Change height calculation and location based on scrollbar changes

--- a/src/features/paging/templates/ui-grid-paging.html
+++ b/src/features/paging/templates/ui-grid-paging.html
@@ -1,4 +1,4 @@
-<div class="ui-grid-pager-panel" ui-grid-pager ng-class="{scrollbars: grid.options.enableScrollbars}">
+<div class="ui-grid-pager-panel" ui-grid-pager>
   <div class="ui-grid-pager-container">
     <div class="ui-grid-pager-control">
       <button type="button" ng-click="pageToFirst()" ng-disabled="cantPageBackward()"><div class="first-triangle"><div class="first-bar"></div></div></button>
