more style tweaks

--- a/src/features/paging/less/ui-grid-paging.less
+++ b/src/features/paging/less/ui-grid-paging.less
@@ -1,9 +1,11 @@
 .ui-grid-pager-panel {
-  position: relative;
-  left: 0;
-  bottom: -7px;
-  height: 25px;
-  width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 2px;
+    height: 35px;
+    width: 100%;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 .ui-grid-pager-container {
