More CSS tweaks

--- a/src/features/paging/less/ui-grid-paging.less
+++ b/src/features/paging/less/ui-grid-paging.less
@@ -1,11 +1,11 @@
 .ui-grid-pager-panel {
     position: absolute;
     left: 0;
-    bottom: 2px;
+    bottom: 0;
     height: 35px;
     width: 100%;
     padding-top: 2px;
-    padding-bottom: 2px;
+    padding-bottom: 4px;
 }
 
 .ui-grid-pager-container {
