Fix missing icons on paging buttons

--- a/src/features/paging/less/ui-grid-paging.less
+++ b/src/features/paging/less/ui-grid-paging.less
@@ -29,7 +29,7 @@
     vertical-align: top;
   }
 
-  .ui-grid-pager-first-bar {
+  .first-bar {
     width: 10px;
     border-left: 2px solid #4d4d4d;
     margin-top: -6px;
@@ -37,7 +37,7 @@
     margin-left: -3px;
   }
 
-  .ui-grid-pager-first-triangle {
+  .first-triangle {
     width: 0;
     height: 0;
     border-style: solid;
@@ -46,15 +46,15 @@
     margin-left: 2px;
   }
 
-  .ui-grid-pager-next-triangle {
+  .next-triangle {
     margin-left: 1px;
   }
 
-  .ui-grid-pager-prev-triangle {
+  .prev-triangle {
     margin-left: 0;
   }
 
-  .ui-grid-pager-last-triangle {
+  .last-triangle {
     width: 0;
     height: 0;
     border-style: solid;
@@ -63,7 +63,7 @@
     margin-left: -1px;
   }
 
-  .ui-grid-pager-last-bar {
+  .last-bar {
     width: 10px;
     border-left: 2px solid #4d4d4d;
     margin-top: -6px;
