Adjust height on each call, tweak css

--- a/src/features/paging/less/ui-grid-paging.less
+++ b/src/features/paging/less/ui-grid-paging.less
@@ -2,10 +2,8 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    height: 35px;
     width: 100%;
-    padding-top: 2px;
-    padding-bottom: 4px;
+    margin-bottom: 2px;
 }
 
 .ui-grid-pager-container {
@@ -87,8 +85,12 @@
 
 .ui-grid-pager-count-container {
   float: right;
+  margin-top: 4px;
+  min-width: 50px;
 
   .ui-grid-pager-count {
     margin-right: 10px;
+    margin-left: 10px;
+    float: right;
   }
 }
