Remove hard coded height adjustment

--- a/src/features/paging/less/ui-grid-paging.less
+++ b/src/features/paging/less/ui-grid-paging.less
@@ -3,7 +3,8 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    margin-bottom: 2px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 
 .ui-grid-pager-container {
