--- a/src/templates/rowTemplate.html
+++ b/src/templates/rowTemplate.html
@@ -2,3 +2,9 @@
 	<div class="ngVerticalBar" ng-style="{height: rowHeight}" ng-class="{ ngVerticalBarVisible: !$last }">&nbsp;</div>
 	<div ng-cell></div>
 </div>
+<div class="expandedRowDetails" ng-show="row.detailsExpanded" ng-style="{ 'position': 'absolute', 'top': row.height() }">
+	<p>This is the new detail</p>
+	<p>This is the new detail</p>
+	<ng-transclude></ng-transclude>
+</div>
+
