--- a/src/templates/gridTemplate.html
+++ b/src/templates/gridTemplate.html
@@ -19,7 +19,7 @@
 </div>
 <div class="ngViewport" unselectable="on" ng-viewport ng-class="{'ui-widget-content': jqueryUITheme}" ng-style="viewportStyle()">
     <div class="ngCanvas" ng-style="canvasStyle()">
-        <div ng-style="rowStyle(row)" ng-repeat="row in renderedRows" ng-click="row.toggleSelected($event)" ng-class="row.alternatingRowClass()" ng-row>
+        <div ng-style="rowStyle(row)" ng-repeat="row in renderedRows" ng-click="row.toggleSelected($event)" ng-class="row.alternatingRowClass()" ng-row class="rowDiv">
 
         </div>
     </div>
