--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -24,7 +24,7 @@
 
 .ui-grid-menu {
   z-index: 2; // So it shows up over grid canvas
-  position: fixed;
+  position: absolute;
   overflow: hidden;
   padding: 0 10px 20px 10px;
   cursor: pointer;
