Added ability to disable action buttons as well as hide them, working on getting grid height to be variable with expanded rows

--- a/src/less/row.less
+++ b/src/less/row.less
@@ -35,11 +35,17 @@
     a:hover {
       background: darkgrey;
     }
-  }
 
-  .expandedRowDetails {
-    //width: 100%;
-    //border: 1px solid lightgrey;
+    a.disabled {
+      //background: lightgrey;
+      color: lightgrey;
+      border-color: lightgrey;
+      cursor: not-allowed;
+    }
+
+    a.disabled:hover {
+      background: none;
+    }
   }
 }
 
