--- a/ng-grid.css
+++ b/ng-grid.css
@@ -350,6 +350,14 @@
 .ngRow .rowActionsCell a:hover {
   background: darkgrey;
 }
+.ngRow .rowActionsCell a.disabled {
+  color: lightgrey;
+  border-color: lightgrey;
+  cursor: not-allowed;
+}
+.ngRow .rowActionsCell a.disabled:hover {
+  background: none;
+}
 .ngCell {
   overflow: hidden;
   position: absolute;
